--- a/lib/help_web/live/product_live/index.html.heex
+++ b/lib/help_web/live/product_live/index.html.heex
@@ -1,5 +1,8 @@
 <.header>
   Listing Products
+  <:subtitle>
+    <%= @greeting %>
+  </:subtitle>
   <:actions>
     <.link patch={~p"/products/new"}>
       <.button>New Product</.button>
@@ -12,10 +15,12 @@
   rows={@streams.products}
   row_click={fn {_id, product} -> JS.navigate(~p"/products/#{product}") end}
 >
-  <:col :let={{_id, product}} label="Name"><%= product.name %></:col>
+  <:col :let={{_id, _product}} label="Emoji"><%= Enum.random(~w(😂 🔥 🚀)) %></:col>
+  <:col :let={{_id, lol}} label="Name"><%= lol.name %></:col>
   <:col :let={{_id, product}} label="Description"><%= product.description %></:col>
   <:col :let={{_id, product}} label="Unit price"><%= product.unit_price %></:col>
   <:col :let={{_id, product}} label="Sku"><%= product.sku %></:col>
+
   <:action :let={{_id, product}}>
     <div class="sr-only">
       <.link navigate={~p"/products/#{product}"}>Show</.link>
@@ -32,7 +37,12 @@
   </:action>
 </.table>
 
-<.modal :if={@live_action in [:new, :edit]} id="product-modal" show on_cancel={JS.patch(~p"/products")}>
+<.modal
+  :if={@live_action in [:new, :edit]}
+  id="product-modal"
+  show
+  on_cancel={JS.patch(~p"/products")}
+>
   <.live_component
     module={HelpWeb.ProductLive.FormComponent}
     id={@product.id || :new}
