[p313] damn form errors
trying to figure out how to pass
changeset's validation errors to
.input via Form.Field. So that
.input reacts with proper rendering

--- a/lib/help_web/live/promo_live.html.heex
+++ b/lib/help_web/live/promo_live.html.heex
@@ -5,21 +5,13 @@
   </:subtitle>
 </.header>
 
-<%!-- <div>
-  <.simple_form for={@changeset} id="promo-form" phx-change="validate" phx-submit="save">
-    <.input field={@changeset[:first_name]} type="text" label="First name" />
-    <.input field={@changeset[:email]} type="text" label="Email" phx-debounce="blur" />
-    <:actions>
-      <.button phx-disable-with="Sending...">Send</.button>
-    </:actions>
-  </.simple_form>
-</div> --%>
 <div>
   <.simple_form for={@form} id="promo-form" phx-change="validate" phx-submit="save">
     <.input field={@form[:first_name]} type="text" label="First name" />
     <.input field={@form[:email]} type="text" label="Email" phx-debounce="blur" />
     <:actions>
-      <.button phx-disable-with="Sending...">Send</.button>
+      <.button :if={@form.source.errors == []} phx-disable-with="Sending...">Send</.button>
+      <.button :if={@form.source.errors != []} disabled>Cannot send</.button>
     </:actions>
   </.simple_form>
 </div>
