[p422] ratings index/show/form ok
CHANGES:

--- a/lib/help_web/live/survey_live.html.heex
+++ b/lib/help_web/live/survey_live.html.heex
@@ -7,6 +7,9 @@
 
   <%= if @demographic do %>
     <DemographicLive.Show.details demographic={@demographic} />
+    <hr />
+    <br />
+    <RatingLive.Index.product_list products={@products} current_user={@current_user} />
   <% else %>
     <.live_component
       module={HelpWeb.DemographicLive.Form}
