--- a/lib/help_web/components/layouts/app.html.heex
+++ b/lib/help_web/components/layouts/app.html.heex
@@ -1,34 +1,11 @@
 <header class={["text-sm text-zinc-500", "py-8 px-4 sm:px-6 lg:px-8"]}>
-  <%!-- <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 bg-red-950 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
-    </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
-    </div>
-  </div> --%>
   <div class={["flex items-center gap-4"]}>
     <%= if Map.get(assigns, :current_user, false) do %>
       <b><%= @current_user.email %></b>
       <.link class={["hover:text-zinc-900"]} href={~p"/products"}>Products</.link>
       <.link class={["hover:text-zinc-900"]} href={~p"/survey"}>Survey</.link>
       <.link class={["hover:text-zinc-900"]} href={~p"/users/settings"}>Settings</.link>
+      <.link class={["hover:text-zinc-900"]} href={~p"/admin/dashboard"}>Dashboard</.link>
       <.link class={["hover:text-zinc-900"]} href={~p"/users/log_out"} method="delete">
         Log out
       </.link>
