[bugfix] correct age_group_filter Queries
CHANGES:
0. added seeds

--- a/lib/help_web/live/admin/survey_results_live.html.heex
+++ b/lib/help_web/live/admin/survey_results_live.html.heex
@@ -23,7 +23,7 @@
           type="select"
           name="age_group_filter_name"
           id="age_group_filter"
-          options={["all", "18 and under", "18 to 25", "25 to 35", "35 and up"]}
+          options={["all", "under 18", "18 to 25", "25 to 35", "over 35"]}
           value="all"
         />
       </.simple_form>
