[gender_filter] added gender filter
NB! when duplicating default handle_event.
dont forget to delete the last {:noreply, socket}
line. Otherwise you'll spend an hour trying to figure
why shit doesnt work when it must.
😵‍💫

--- a/lib/help_web/live/admin/survey_results_live.html.heex
+++ b/lib/help_web/live/admin/survey_results_live.html.heex
@@ -9,7 +9,7 @@
           name="gender_filter"
           id="gender_filter"
           options={~w(all male female)}
-          value="male"
+          value={@gender_filter}
         />
       </.simple_form>
       <.simple_form
@@ -24,7 +24,7 @@
           name="age_group_filter_name"
           id="age_group_filter"
           options={["all", "under 18", "18 to 25", "25 to 35", "over 35"]}
-          value="all"
+          value={@age_group_filter}
         />
       </.simple_form>
     </div>
