--- a/lib/help_web/components/layouts/app.html.heex
+++ b/lib/help_web/components/layouts/app.html.heex
@@ -11,7 +11,7 @@
       </.link>
     <% else %>
       <.link class={["hover:text-zinc-900"]} href={~p"/users/register"}>Register</.link>
-      <.link class={["hover:text-zinc-900"]} href={~p"/users/log_in"}>Log_in</.link>
+      <.link class={["hover:text-zinc-900"]} href={~p"/users/log_in"}>Log in</.link>
     <% end %>
   </div>
 </header>
