--- a/lib/help_web/live/admin/dashboard_live.html.heex
+++ b/lib/help_web/live/admin/dashboard_live.html.heex
@@ -2,3 +2,4 @@
   <h1 class="font-heavy text-3xl">🫥 Dashboard</h1>
 </section>
 <.live_component module={HelpWeb.Admin.SurveyResultsLive} id={@survey_results_component_id} />
+<.live_component module={HelpWeb.Admin.UserActivityLive} id={@user_activity_component_id} />
