[p585] track survey_takers
CHANGES:

--- a/lib/help_web/live/admin/user_activity_live.html.heex
+++ b/lib/help_web/live/admin/user_activity_live.html.heex
@@ -9,4 +9,7 @@
       </li>
     </ul>
   </div>
+
+  <p>Active users currently taking survey: <%= @survey_takers %></p>
+  <%!-- [{"ooddaa@gmail.com", [%{username: "oda"}]}] --%>
 </div>
